@@ -4,6 +4,7 @@ package com.intellij.util.indexing;
 import com.intellij.find.ngrams.TrigramIndex;
 import com.intellij.ide.highlighter.JavaFileType;
 import com.intellij.ide.scratch.ScratchRootType;
+import com.intellij.ide.scratch.ScratchesSearchScope;
 import com.intellij.ide.todo.TodoConfiguration;
 import com.intellij.java.index.StringIndex;
 import com.intellij.lang.LanguageParserDefinitions;
@@ -24,8 +25,10 @@ import com.intellij.openapi.fileEditor.impl.FileDocumentManagerImpl;
 import com.intellij.openapi.fileTypes.ExactFileNameMatcher;
 import com.intellij.openapi.fileTypes.FileTypeManager;
 import com.intellij.openapi.fileTypes.PlainTextFileType;
+import com.intellij.openapi.fileTypes.PlainTextLanguage;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.StdModuleTypes;
+import com.intellij.openapi.module.impl.scopes.ModuleWithDependentsScope;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.progress.util.ProgressIndicatorBase;
@@ -34,10 +37,7 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.roots.ContentIterator;
 import com.intellij.openapi.roots.impl.FilePropertyPusher;
 import com.intellij.openapi.roots.impl.JavaLanguageLevelPusher;
-import com.intellij.openapi.util.Computable;
-import com.intellij.openapi.util.RecursionManager;
-import com.intellij.openapi.util.Ref;
-import com.intellij.openapi.util.ThrowableComputable;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.text.StringUtil;
@@ -51,17 +51,15 @@ import com.intellij.openapi.vfs.newvfs.impl.VirtualFileSystemEntry;
 import com.intellij.pom.java.LanguageLevel;
 import com.intellij.psi.*;
 import com.intellij.psi.codeStyle.CodeStyleManager;
-import com.intellij.psi.impl.PsiDocumentManagerImpl;
-import com.intellij.psi.impl.PsiManagerEx;
 import com.intellij.psi.impl.cache.impl.id.IdIndex;
 import com.intellij.psi.impl.cache.impl.id.IdIndexEntry;
-import com.intellij.psi.impl.cache.impl.id.IdIndexImpl;
 import com.intellij.psi.impl.file.impl.FileManagerImpl;
 import com.intellij.psi.impl.java.JavaFunctionalExpressionIndex;
 import com.intellij.psi.impl.java.stubs.index.JavaStubIndexKeys;
 import com.intellij.psi.impl.search.JavaNullMethodArgumentIndex;
 import com.intellij.psi.impl.source.*;
 import com.intellij.psi.search.*;
+import com.intellij.psi.search.impl.VirtualFileEnumeration;
 import com.intellij.psi.stubs.*;
 import com.intellij.psi.util.CachedValue;
 import com.intellij.psi.util.CachedValueProvider;
@@ -75,7 +73,6 @@ import com.intellij.util.indexing.dependencies.IndexingRequestToken;
 import com.intellij.util.indexing.dependencies.ProjectIndexingDependenciesService;
 import com.intellij.util.indexing.dependencies.ScanningRequestToken;
 import com.intellij.util.indexing.events.IndexedFilesListener;
-import com.intellij.util.indexing.events.VfsEventsMerger;
 import com.intellij.util.indexing.impl.IndexDebugProperties;
 import com.intellij.util.indexing.impl.MapIndexStorage;
 import com.intellij.util.indexing.impl.MapReduceIndex;
@@ -92,6 +89,7 @@ import com.intellij.util.ui.UIUtil;
 import com.siyeh.ig.JavaOverridingMethodUtil;
 import org.intellij.lang.annotations.Language;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.groovy.GroovyFileType;
 import org.jetbrains.plugins.groovy.GroovyLanguage;
 
@@ -186,8 +184,8 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
   private static StringIndex createIndex(String testName, EnumeratorStringDescriptor keyDescriptor, boolean readOnly) throws IOException {
     final File storageFile = FileUtil.createTempFile("index_test", "storage");
     final File metaIndexFile = FileUtil.createTempFile("index_test_inputs", "storage");
-    final VfsAwareMapIndexStorage indexStorage =
-      new VfsAwareMapIndexStorage(storageFile.toPath(), keyDescriptor, new EnumeratorStringDescriptor(), 16 * 1024, readOnly);
+    final VfsAwareMapIndexStorage<String, String> indexStorage =
+      new VfsAwareMapIndexStorage<>(storageFile.toPath(), keyDescriptor, new EnumeratorStringDescriptor(), 16 * 1024, readOnly);
     return new StringIndex(testName, indexStorage, metaIndexFile, !readOnly);
   }
 
@@ -195,7 +193,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertSameElements(actual, expected);
   }
 
-  public void testCollectedPsiWithChangedDocument() throws IOException {
+  public void testCollectedPsiWithChangedDocument() {
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
 
     assertNotNull(findClass("Foo"));
@@ -210,13 +208,14 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertNotNull(foo);
     assertTrue(foo.isValid());
     assertEquals("class Foo {}", foo.getText());
+    //noinspection ConstantValue
     assertTrue(foo.isValid());
 
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
     assertNull(findClass("Foo"));
   }
 
-  public void testCollectedPsiWithDocumentChangedCommittedAndChangedAgain() throws IOException {
+  public void testCollectedPsiWithDocumentChangedCommittedAndChangedAgain() {
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
 
     assertNotNull(findClass("Foo"));
@@ -236,7 +235,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     return JavaPsiFacade.getInstance(getProject()).findClass(name, GlobalSearchScope.allScope(getProject()));
   }
 
-  public void testSavedUncommittedDocument() throws IOException {
+  public void testSavedUncommittedDocument() {
     final VirtualFile vFile = myFixture.addFileToProject("Foo.java", "").getVirtualFile();
 
     assertNull(findClass("Foo"));
@@ -249,7 +248,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.insertString(0, "class Foo {}"));
     FileDocumentManager.getInstance().saveDocument(document);
 
-    assertTrue(count == getPsiManager().getModificationTracker().getModificationCount());
+    assertEquals(count, getPsiManager().getModificationTracker().getModificationCount());
     assertNull(findClass("Foo"));
 
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
@@ -298,7 +297,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertNotNull(findClass("Foo"));
   }
 
-  public void testSkipUnknownFileTypes() throws IOException {
+  public void testSkipUnknownFileTypes() {
     final VirtualFile vFile = myFixture.addFileToProject("Foo.test", "Foo").getVirtualFile();
     assertEquals(PlainTextFileType.INSTANCE, vFile.getFileType());
     final PsiSearchHelper helper = PsiSearchHelper.getInstance(getProject());
@@ -314,47 +313,41 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     assertOneElement(helper.findFilesWithPlainTextWords("Foo"));
 
-    WriteCommandAction.runWriteCommandAction(getProject(), new Runnable() {
-      @Override
-      public void run() {
-        document.insertString(0, " ");
-        assertEquals("Foo", file.getText());
-        assertOneElement(helper.findFilesWithPlainTextWords("Foo"));
+    WriteCommandAction.runWriteCommandAction(getProject(), () -> {
+      document.insertString(0, " ");
+      assertEquals("Foo", file.getText());
+      assertOneElement(helper.findFilesWithPlainTextWords("Foo"));
 
-        FileDocumentManager.getInstance().saveDocument(document);
-        assertEquals("Foo", file.getText());
-        assertOneElement(helper.findFilesWithPlainTextWords("Foo"));
+      FileDocumentManager.getInstance().saveDocument(document);
+      assertEquals("Foo", file.getText());
+      assertOneElement(helper.findFilesWithPlainTextWords("Foo"));
 
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-        assertEquals(" Foo", file.getText());
-        assertOneElement(helper.findFilesWithPlainTextWords("Foo"));
-      }
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      assertEquals(" Foo", file.getText());
+      assertOneElement(helper.findFilesWithPlainTextWords("Foo"));
     });
   }
 
-  public void testUndoToFileContentForUnsavedCommittedDocument() throws IOException {
+  public void testUndoToFileContentForUnsavedCommittedDocument() {
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
     ((VirtualFileSystemEntry)vFile).setModificationStamp(0);// as unchanged file
 
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
-    assertTrue(document != null);
-    assert document.getModificationStamp() == 0;
+    assertNotNull(document);
+    assertEquals(0, document.getModificationStamp());
     assertNotNull(findClass("Foo"));
 
-    WriteCommandAction.runWriteCommandAction(getProject(), new Runnable() {
-      @Override
-      public void run() {
-        document.insertString(0, "import Bar;\n");
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-        assertNotNull(findClass("Foo"));
-      }
+    WriteCommandAction.runWriteCommandAction(getProject(), () -> {
+      document.insertString(0, "import Bar;\n");
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      assertNotNull(findClass("Foo"));
     });
 
     final UndoManager undoManager = UndoManager.getInstance(getProject());
     final FileEditor selectedEditor = FileEditorManager.getInstance(getProject()).openFile(vFile, false)[0];
-    ((UndoManagerImpl)undoManager).setEditorProvider(new CurrentEditorProvider() {
+    ((UndoManagerImpl)undoManager).setOverriddenEditorProvider(new CurrentEditorProvider() {
       @Override
-      public FileEditor getCurrentEditor() {
+      public FileEditor getCurrentEditor(@Nullable Project project) {
         return selectedEditor;
       }
     });
@@ -370,7 +363,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final PsiFile psiFile = myFixture.addFileToProject("Foo.java", "class Foo {}");
     GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length == 0;
+    assertEquals(0, FileDocumentManager.getInstance().getUnsavedDocuments().length);
 
     WriteCommandAction.runWriteCommandAction(getProject(),
                                              (Computable<PsiElement>)() -> ((PsiJavaFile)psiFile).getImportList()
@@ -378,34 +371,36 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     GCUtil.tryGcSoftlyReachableObjects();
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
 
-    assert ((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(psiFile.getVirtualFile().getParent()) == null;
-    WriteCommandAction.runWriteCommandAction(getProject(),() ->{ assert psiFile.setName("Foo1.java").equals(psiFile); });
+    assertNull(((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(psiFile.getVirtualFile().getParent()));
+    WriteCommandAction.runWriteCommandAction(getProject(), () -> {
+      assertEquals(psiFile.setName("Foo1.java"), psiFile);
+    });
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length > 0;
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertTrue(FileDocumentManager.getInstance().getUnsavedDocuments().length > 0);
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
   }
 
   public void test_rename_dir_with_unsaved_file() throws IOException {
     final PsiFile psiFile = myFixture.addFileToProject("foo/Foo.java", "package pkg; class Foo {}");
     GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length == 0;
+    assertEquals(0, FileDocumentManager.getInstance().getUnsavedDocuments().length);
 
     WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() ->
       ((PsiJavaFile)psiFile).getImportList().add(getElementFactory().createImportStatementOnDemand("java.io")));
 
     GCUtil.tryGcSoftlyReachableObjects();
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope));
 
     final VirtualFile dir = psiFile.getVirtualFile().getParent();
-    assert ((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(dir) == null;
-    WriteAction.run(() -> dir.rename(IndexTest.this, "bar"));
+    assertNull(((FileManagerImpl)getPsiManager().getFileManager()).getCachedDirectory(dir));
+    WriteAction.run(() -> dir.rename(this, "bar"));
 
-    assert FileDocumentManager.getInstance().getUnsavedDocuments().length > 0;
-    assert JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope) != null;
+    assertTrue(FileDocumentManager.getInstance().getUnsavedDocuments().length > 0);
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("pkg.Foo", scope));
   }
 
   public void test_language_level_change() {
@@ -417,15 +412,15 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     WriteCommandAction.runWriteCommandAction(getProject(),
                                              (Computable<PsiElement>)() -> CodeStyleManager.getInstance(getProject()).reformat(psiFile));
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
 
-    long stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
     IdeaTestUtil.setModuleLanguageLevel(myFixture.getModule(), LanguageLevel.JDK_1_3);
 
-    assert ((PsiJavaFile)psiFile).getImportList().getNode() != null;
+    assertNotNull(((PsiJavaFile)psiFile).getImportList().getNode());
 
-    assert stamp != ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
   }
 
   public void test_rename_file_with_indexed_associated_unsaved_document_don_t_lost_its_data() {
@@ -455,7 +450,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     PostprocessReformattingAspect.getInstance(getProject()).doPostponedFormatting();
     IdeaTestUtil.setModuleLanguageLevel(myFixture.getModule(), level);
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
   }
 
   public void test_language_level_change2() {
@@ -470,13 +465,13 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
                                              (Computable<PsiElement>)() -> CodeStyleManager.getInstance(getProject()).reformat(psiFile));
     PostprocessReformattingAspect.getInstance(getProject()).doPostponedFormatting();
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo", scope));
 
     IdeaTestUtil.setModuleLanguageLevel(myFixture.getModule(), LanguageLevel.JDK_1_3);
-    assert ((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode() != null;
+    assertNotNull(((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode());
 
     GCUtil.tryGcSoftlyReachableObjects();
-    assert ((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode() != null;
+    assertNotNull(((PsiJavaFile)getPsiManager().findFile(vFile)).getImportList().getNode());
   }
 
   public void test_unknown_file_type_in_stubs() throws IOException {
@@ -484,36 +479,36 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo {}"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    assert findClass("Foo") != null;
+    assertNotNull(findClass("Foo"));
 
     WriteAction.run(() -> vFile.rename(null, "Foo1"));
-    assert findClass("Foo") == null;
+    assertNull(findClass("Foo"));
   }
 
   public void test_uncommitted_saved_document_2() {
     final PsiFile file = myFixture.addFileToProject("a.java", "class Foo {}");
     WriteCommandAction.runWriteCommandAction(getProject(), () -> {
-        assert findClass("Foo") != null;
-        file.getViewProvider().getDocument().setText("");
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-        file.getViewProvider().getDocument().setText("class Foo {}");
-        FileDocumentManager.getInstance().saveAllDocuments();
-      assert findClass("Foo") == null;
-      });
+      assertNotNull(findClass("Foo"));
+      file.getViewProvider().getDocument().setText("");
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      file.getViewProvider().getDocument().setText("class Foo {}");
+      FileDocumentManager.getInstance().saveAllDocuments();
+      assertNull(findClass("Foo"));
+    });
   }
 
   public void test_plain_text_file_type_in_stubs() throws IOException {
     final VirtualFile vFile = myFixture.addFileToProject("Foo.java", "class Bar {}").getVirtualFile();
-    assert findClass("Bar") != null;
+    assertNotNull(findClass("Bar"));
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo {}"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    assert findClass("Foo") != null;
-    assert findClass("Bar") == null;
+    assertNotNull(findClass("Foo"));
+    assertNull(findClass("Bar"));
 
-    WriteAction.run(() ->vFile.rename(null, "Foo1"));
-    assert findClass("Foo") == null;
-    assert findClass("Bar") == null;
+    WriteAction.run(() -> vFile.rename(null, "Foo1"));
+    assertNull(findClass("Foo"));
+    assertNull(findClass("Bar"));
   }
 
   public void test_changing_a_file_without_psi_makes_the_document_committed_and_updates_index() throws IOException {
@@ -522,23 +517,24 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
     WriteCommandAction.runWriteCommandAction(getProject(),
-                                             () -> FileDocumentManager.getInstance().getDocument(vFile).setText("import zoo.Zoo; class Foo1 {}"));
-    assert PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length > 0;
+                                             () -> FileDocumentManager.getInstance().getDocument(vFile)
+                                               .setText("import zoo.Zoo; class Foo1 {}"));
+    assertTrue(PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length > 0);
 
     FileDocumentManager.getInstance().saveAllDocuments();
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
 
     //noinspection GroovyUnusedAssignment
     psiFile = null;
-    GCWatcher.tracking(((PsiManagerEx)getPsiManager()).getFileManager().getCachedPsiFile(vFile))
+    GCWatcher.tracking(getPsiManager().getFileManager().getCachedPsiFile(vFile))
       .ensureCollected(() -> UIUtil.dispatchAllInvocationEvents());
-    assert getPsiManager().getFileManager().getCachedPsiFile(vFile) == null;
+    assertNull(getPsiManager().getFileManager().getCachedPsiFile(vFile));
 
     WriteAction.run(() -> VfsUtil.saveText(vFile, "class Foo3 {}"));
 
-    assert PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length == 0;
+    assertEquals(0, PsiDocumentManager.getInstance(getProject()).getUncommittedDocuments().length);
 
-    assert JavaPsiFacade.getInstance(getProject()).findClass("Foo3", scope) != null;
+    assertNotNull(JavaPsiFacade.getInstance(getProject()).findClass("Foo3", scope));
   }
 
   public void test_rename_file_invalidates_indices_in_right_order() throws IOException {
@@ -562,7 +558,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject());
     //assertIsIndexed(vFile) FIXME-ank: not indexed, because indexing changes file's modCounter
 
-    WriteAction.run(() ->VfsUtil.saveText(vFile, "Foo class"));
+    WriteAction.run(() -> VfsUtil.saveText(vFile, "Foo class"));
     IndexingRequestToken indexingRequest =
       getProject().getService(ProjectIndexingDependenciesService.class).getLatestIndexingRequestToken();
     assertFalse(IndexingFlag.isFileIndexed(vFile, indexingRequest.getFileIndexingStamp(vFile)));
@@ -573,10 +569,10 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject()));
 
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
-    WriteCommandAction.runWriteCommandAction(getProject(), () ->document.setText("Foo2 class"));
+    WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("Foo2 class"));
     stamp = FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject());
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo2"));
-    assertTrue(stamp == FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject()));
+    assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(IdIndex.NAME, getProject()));
 
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("Foo3 class"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
@@ -587,7 +583,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     stamp = FileBasedIndex.getInstance().getIndexModificationStamp(JavaFunctionalExpressionIndex.INDEX_ID, getProject());
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo { Runnable x = () -> { }; }"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    assert stamp == FileBasedIndex.getInstance().getIndexModificationStamp(JavaFunctionalExpressionIndex.INDEX_ID, getProject());
+    assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(JavaFunctionalExpressionIndex.INDEX_ID, getProject()));
   }
 
   private void assertIsIndexed(VirtualFile vFile) {
@@ -622,27 +618,26 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     WriteAction.run(() -> VfsUtil.saveText(vFile, text));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
 
-    assertTrue(
-      stamp == (FileBasedIndex.getInstance()).getIndexModificationStamp(JavaNullMethodArgumentIndex.INDEX_ID, getProject()));
+    assertEquals(stamp, (FileBasedIndex.getInstance()).getIndexModificationStamp(JavaNullMethodArgumentIndex.INDEX_ID, getProject()));
     files = FileBasedIndex.getInstance()
       .getContainingFiles(JavaNullMethodArgumentIndex.INDEX_ID, data, GlobalSearchScope.projectScope(getProject()));
-    assertTrue(files.size() == 1);
+    assertEquals(1, files.size());
     assertEquals(files.iterator().next(), vFile);
   }
 
-  public void test_snapshot_index_in_memory_state_after_commit_of_unsaved_document() throws IOException {
+  public void test_snapshot_index_in_memory_state_after_commit_of_unsaved_document() {
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
     IdIndexEntry classEntry = new IdIndexEntry("class", true);
-    FileBasedIndex.ValueProcessor findValueProcessor = (file, value) ->  !file.equals(vFile);
+    FileBasedIndex.ValueProcessor<Integer> findValueProcessor = (file, value) -> !file.equals(vFile);
 
     GlobalSearchScope projectScope = GlobalSearchScope.projectScope(getProject());
-    boolean result = FileBasedIndex.getInstance().processValues(IdIndexImpl.NAME, classEntry, null, findValueProcessor, projectScope);
+    boolean result = FileBasedIndex.getInstance().processValues(IdIndex.NAME, classEntry, null, findValueProcessor, projectScope);
     assertFalse(result);
 
     final Document document = FileDocumentManager.getInstance().getDocument(vFile);
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText(""));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    result = FileBasedIndex.getInstance().processValues(IdIndexImpl.NAME, classEntry, null, findValueProcessor, projectScope);
+    result = FileBasedIndex.getInstance().processValues(IdIndex.NAME, classEntry, null, findValueProcessor, projectScope);
     assertTrue(result);
   }
 
@@ -651,8 +646,8 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     long stamp = ((StubIndexImpl)StubIndex.getInstance()).getIndexModificationStamp(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject());
 
     WriteAction.run(() -> VfsUtil.saveText(vFile, "class Foo { int foo; }"));
-    assertTrue(
-      stamp == ((StubIndexImpl)StubIndex.getInstance()).getIndexModificationStamp(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject()));
+    assertEquals(stamp,
+                 ((StubIndexImpl)StubIndex.getInstance()).getIndexModificationStamp(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject()));
 
     WriteAction.run(() -> VfsUtil.saveText(vFile, "class Foo2 { }"));
     assertTrue(
@@ -665,8 +660,8 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo3 { int foo; }"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-    assertTrue(
-      stamp == ((StubIndexImpl)StubIndex.getInstance()).getIndexModificationStamp(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject()));
+    assertEquals(stamp,
+                 ((StubIndexImpl)StubIndex.getInstance()).getIndexModificationStamp(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject()));
 
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.setText("class Foo2 { }"));
     PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
@@ -674,13 +669,13 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       stamp != ((StubIndexImpl)StubIndex.getInstance()).getIndexModificationStamp(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject()));
   }
 
-  public void test_internalErrorOfStubProcessingInvalidatesIndex() throws IOException {
+  public void test_internalErrorOfStubProcessingInvalidatesIndex() {
     DefaultLogger.disableStderrDumping(getTestRootDisposable());
 
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
 
     Ref<PsiClass> clazz = Ref.create(findClass("Foo"));
-    assert clazz.get() != null;
+    assertNotNull(clazz.get());
 
     runFindClassStubIndexQueryThatProducesInvalidResult("Foo");
 
@@ -694,7 +689,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     PsiDocumentManager.getInstance(getProject()).commitDocument(document);
 
     clazz = Ref.create(findClass("Foo2"));
-    assert clazz.get() != null;
+    assertNotNull(clazz.get());
 
     runFindClassStubIndexQueryThatProducesInvalidResult("Foo2");
 
@@ -707,24 +702,18 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final AtomicReference<PsiClass> foundFile = new AtomicReference<>();
 
     final GlobalSearchScope searchScope = GlobalSearchScope.allScope(getProject());
-    final Processor<PsiClass> processor = new Processor<PsiClass>() {
-      @Override
-      public boolean process(PsiClass file) {
-        foundFile.set(file);
-        return false;
-      }
+    final Processor<PsiClass> processor = file -> {
+      foundFile.set(file);
+      return false;
     };
 
     try {
 
       StubIndex.getInstance()
-        .processElements(JavaStubIndexKeys.CLASS_FQN, qName, getProject(), searchScope, PsiClass.class, new Processor<PsiClass>() {
-          @Override
-          public boolean process(PsiClass aClass) {
-            StubIndex.getInstance()
-              .processElements(JavaStubIndexKeys.CLASS_FQN, qName, getProject(), searchScope, PsiClass.class, processor);
-            return false;
-          }
+        .processElements(JavaStubIndexKeys.CLASS_FQN, qName, getProject(), searchScope, PsiClass.class, aClass -> {
+          StubIndex.getInstance()
+            .processElements(JavaStubIndexKeys.CLASS_FQN, qName, getProject(), searchScope, PsiClass.class, processor);
+          return false;
         });
       fail("Should fail with class mismatch");
     }
@@ -744,7 +733,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     //}
   }
 
-  public void test_do_not_collect_stub_tree_while_holding_stub_elements() throws IOException {
+  public void test_do_not_collect_stub_tree_while_holding_stub_elements() {
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
 
     PsiFileWithStubSupport psiFile = (PsiFileWithStubSupport)getPsiManager().findFile(vFile);
@@ -760,93 +749,59 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertEquals(stubTreeHash, stubTree.hashCode());
   }
 
-  public void test_report_using_index_from_other_index() throws IOException {
+  public void test_report_using_index_from_other_index() {
     final String className = "Foo";
     final VirtualFile vfile = myFixture.addClass("class " + className + " { void bar() {} }").getContainingFile().getVirtualFile();
     final GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
-    final List<Boolean> foundClass = new ArrayList<Boolean>(Arrays.asList(false));
-    final List<Boolean> foundMethod = new ArrayList<Boolean>(Arrays.asList(false));
+    final List<Boolean> foundClass = new ArrayList<>(List.of(false));
+    final List<Boolean> foundMethod = new ArrayList<>(List.of(false));
 
-    try {
-      StubIndex.getInstance()
-        .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, className, getProject(), scope, PsiClass.class, new Processor<PsiClass>() {
-          @Override
-          public boolean process(PsiClass aClass) {
-            foundClass.set(0, true);
-            StubIndex.getInstance()
-              .processElements(JavaStubIndexKeys.METHODS, "bar", getProject(), scope, PsiMethod.class, new Processor<PsiMethod>() {
-                @Override
-                public boolean process(PsiMethod method) {
-                  foundMethod.set(0, true);
-                  return true;
-                }
-              });
+    StubIndex.getInstance()
+      .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, className, getProject(), scope, PsiClass.class, aClass -> {
+        foundClass.set(0, true);
+        StubIndex.getInstance()
+          .processElements(JavaStubIndexKeys.METHODS, "bar", getProject(), scope, PsiMethod.class, method -> {
+            foundMethod.set(0, true);
             return true;
-          }
-        });
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
+          });
+        return true;
+      });
 
 
     assertTrue(foundClass.get(0));
     assertTrue(foundMethod.get(0));// allow access stub index processing other index
 
-    final List<Boolean> foundClassProcessAll = new ArrayList<Boolean>(Arrays.asList(false));
-    final List<Boolean> foundClassStub = new ArrayList<Boolean>(Arrays.asList(false));
+    final List<Boolean> foundClassProcessAll = new ArrayList<>(List.of(false));
+    final List<Boolean> foundClassStub = new ArrayList<>(List.of(false));
 
-    try {
-      StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), new Processor<String>() {
-        @Override
-        public boolean process(String aClass) {
-          if (!className.equals(aClass)) return true;
-          foundClassProcessAll.set(0, true);
-          StubIndex.getInstance()
-            .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, new Processor<PsiClass>() {
-              @Override
-              public boolean process(PsiClass clazz) {
-                foundClassStub.set(0, true);
-                return true;
-              }
-            });
+    StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), aClass -> {
+      if (!className.equals(aClass)) return true;
+      foundClassProcessAll.set(0, true);
+      StubIndex.getInstance()
+        .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, clazz -> {
+          foundClassStub.set(0, true);
           return true;
-        }
-      });
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
-
+        });
+      return true;
+    });
 
     assertTrue(foundClassProcessAll.get(0));
     assertTrue(foundClassStub.get(0));
 
-    final List<Boolean> foundId = new ArrayList<Boolean>(Arrays.asList(false));
-    final List<Boolean> foundStub = new ArrayList<Boolean>(Arrays.asList(false));
+    final List<Boolean> foundId = new ArrayList<>(List.of(false));
+    final List<Boolean> foundStub = new ArrayList<>(List.of(false));
 
-    try {
-      FileBasedIndex.getInstance()
-        .processValues(IdIndex.NAME, new IdIndexEntry("Foo", true), null, new FileBasedIndex.ValueProcessor<Integer>() {
-          @Override
-          public boolean process(@NotNull VirtualFile file, Integer value) {
-            foundId.set(0, true);
-            FileBasedIndex.getInstance()
-              .processValues(StubUpdatingIndex.INDEX_ID, assertInstanceOf(vfile, VirtualFileWithId.class).getId(), null,
-                             new FileBasedIndex.ValueProcessor<SerializedStubTree>() {
-                               @Override
-                               public boolean process(@NotNull VirtualFile file2, SerializedStubTree value2) {
-                                 foundStub.set(0, true);
-                                 return true;
-                               }
-                             }, scope);
-            return true;
-          }
-        }, scope);
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
+    FileBasedIndex.getInstance()
+      .processValues(IdIndex.NAME, new IdIndexEntry("Foo", true), null, (file, value) -> {
+        foundId.set(0, true);
+        FileBasedIndex.getInstance()
+          .processValues(StubUpdatingIndex.INDEX_ID, assertInstanceOf(vfile, VirtualFileWithId.class).getId(), null,
+                         (file2, value2) -> {
+                           foundStub.set(0, true);
+                           return true;
+                         }, scope);
+        return true;
+      }, scope);
 
 
     assertTrue(foundId.get(0));
@@ -857,21 +812,14 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final GlobalSearchScope allScope = new EverythingGlobalScope();
     // create file to be indexed
     final VirtualFile testFile = myFixture.addFileToProject("test.txt", "test").getVirtualFile();
-    UsefulTestCase.assertNoException(IllegalArgumentException.class, new ThrowableRunnable<Throwable>() {
-      @Override
-      public void run() throws Throwable {
-        //force to index new file with null project scope
-        FileBasedIndex.getInstance().ensureUpToDate(IdIndex.NAME, getProject(), allScope);
-      }
+    UsefulTestCase.assertNoException(IllegalArgumentException.class, (ThrowableRunnable<Throwable>)() -> {
+      //force to index new file with null project scope
+      FileBasedIndex.getInstance().ensureUpToDate(IdIndex.NAME, getProject(), allScope);
     });
     assertNotNull(testFile);
   }
 
-  public class RecordingVfsListener extends IndexedFilesListener {
-    public RecordingVfsListener(IndexTest enclosing) {
-      super();
-    }
-
+  public static class RecordingVfsListener extends IndexedFilesListener {
     @Override
     protected void iterateIndexableFiles(@NotNull VirtualFile file, @NotNull ContentIterator iterator) {
       VfsUtilCore.visitChildrenRecursively(file, new VirtualFileVisitor<Void>() {
@@ -885,12 +833,9 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     public String indexingOperation(VirtualFile file) {
       Ref<String> operation = new Ref<>();
-      getEventMerger().processChanges(new VfsEventsMerger.VfsEventProcessor() {
-        @Override
-        public boolean process(@NotNull VfsEventsMerger.ChangeInfo info) {
-          operation.set(info.toString());
-          return true;
-        }
+      getEventMerger().processChanges(info -> {
+        operation.set(info.toString());
+        return true;
       });
 
       return StringUtil.replace(operation.get(), file.getPath(), file.getName());
@@ -898,51 +843,51 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
   }
 
   public void testIndexedFilesListener() throws Throwable {
-    RecordingVfsListener listener = new RecordingVfsListener(this);
+    RecordingVfsListener listener = new RecordingVfsListener();
 
     VirtualFileManager.getInstance().addAsyncFileListener(listener, myFixture.getTestRootDisposable());
 
     String fileName = "test.txt";
     final VirtualFile testFile = myFixture.addFileToProject(fileName, "test").getVirtualFile();
 
-    assert ("file: " + fileName + "; operation: UPDATE ADD").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: CONTENT_CHANGE ADD"), listener.indexingOperation(testFile));
 
     FileContentUtilCore.reparseFiles(Collections.singletonList(testFile));
 
-    assert ("file: " + fileName + "; operation: ADD").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: ADD"), listener.indexingOperation(testFile));
 
     WriteAction.run(() -> VfsUtil.saveText(testFile, "foo"));
     WriteAction.run(() -> VfsUtil.saveText(testFile, "bar"));
 
-    assert ("file: " + fileName + "; operation: UPDATE").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: CONTENT_CHANGE"), listener.indexingOperation(testFile));
 
     WriteAction.run(() -> VfsUtil.saveText(testFile, "baz"));
     WriteAction.run(() -> testFile.delete(null));
 
-    assert ("file: " + fileName + "; operation: REMOVE").equals(listener.indexingOperation(testFile));
+    assertEquals(("file: " + fileName + "; operation: REMOVE"), listener.indexingOperation(testFile));
   }
 
   public void test_files_inside_copied_directory_are_indexed() throws IOException {
     JavaPsiFacade facade = JavaPsiFacade.getInstance(getProject());
 
     final PsiFile srcFile = myFixture.addFileToProject("foo/bar/A.java", "class A {}");
-    assert facade.findClass("A", GlobalSearchScope.moduleScope(getModule())) != null;
+    assertNotNull(facade.findClass("A", GlobalSearchScope.moduleScope(getModule())));
 
     final VirtualFile anotherDir = myFixture.getTempDirFixture().findOrCreateDir("another");
     Module anotherModule = PsiTestUtil.addModule(getProject(), StdModuleTypes.JAVA, "another", anotherDir);
-    assert facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)) == null;
+    assertNull(facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)));
 
-    WriteAction.run(() -> srcFile.getVirtualFile().getParent().copy(IndexTest.this, anotherDir, "doo"));
+    WriteAction.run(() -> srcFile.getVirtualFile().getParent().copy(this, anotherDir, "doo"));
 
-    assert facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)) != null;
-    assert JavaFileElementType.isInSourceContent(myFixture.getTempDirFixture().getFile("another/doo/A.java"));
+    assertNotNull(facade.findClass("A", GlobalSearchScope.moduleScope(anotherModule)));
+    assertTrue(JavaFileElementType.isInSourceContent(myFixture.getTempDirFixture().getFile("another/doo/A.java")));
   }
 
   public void test_requesting_nonexisted_index_fails_as_expected() {
-    ID<?, ?> myId = ID.create("my.id");
+    ID<Object, Object> myId = ID.create("my.id");
     try {
-      FileBasedIndex.getInstance().getContainingFiles((ID<Object, Object>)myId, "null", GlobalSearchScope.allScope(getProject()));
-      FileBasedIndex.getInstance().processAllKeys((ID<Object, ?>)myId, CommonProcessors.alwaysTrue(), getProject());
+      FileBasedIndex.getInstance().getContainingFiles(myId, "null", GlobalSearchScope.allScope(getProject()));
+      FileBasedIndex.getInstance().processAllKeys(myId, CommonProcessors.alwaysTrue(), getProject());
       fail();
     }
     catch (IllegalStateException ignored) {
@@ -968,13 +913,13 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
   public void test_commit_without_reparse_properly_changes_index() {
     PsiFile srcFile = myFixture.addFileToProject("A.java", "class A {}");
-    assert findClass("A") != null;
+    assertNotNull(findClass("A"));
 
     final Document document = FileDocumentManager.getInstance().getDocument(srcFile.getVirtualFile());
     WriteCommandAction.runWriteCommandAction(getProject(), () -> document.replaceString(0, document.getTextLength(), "class B {}"));
     assertNotNull(findClass("A"));
 
-    ((PsiDocumentManagerImpl)PsiDocumentManager.getInstance(getProject())).commitDocument(document);
+    PsiDocumentManager.getInstance(getProject()).commitDocument(document);
 
     assertNull(findClass("A"));
     assertNotNull(findClass("B"));
@@ -983,7 +928,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertNotNull(findClass("B"));
 
     FileDocumentManager.getInstance().saveDocument(document);
-    ((PsiDocumentManagerImpl)PsiDocumentManager.getInstance(getProject())).commitDocument(document);
+    PsiDocumentManager.getInstance(getProject()).commitDocument(document);
 
     assertNull(findClass("B"));
     assertNotNull(findClass("C"));
@@ -998,15 +943,14 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     WriteCommandAction.runWriteCommandAction(getProject(), () -> getPsiManager().reloadFromDisk(file));
 
-    assert findClass("Foo") != null;
+    assertNotNull(findClass("Foo"));
   }
 
   public void test_read_only_index_has_read_only_storages() throws IOException {
     MapReduceIndex<String, String, ?> index = createIndex(getTestName(false), new EnumeratorStringDescriptor(), true).getIndex();
 
     try {
-      MapReduceIndex mapReduceIndex = assertInstanceOf(index, MapReduceIndex.class);
-      MapIndexStorage<String, String> storage = assertInstanceOf(mapReduceIndex.getStorage(), MapIndexStorage.class);
+      MapIndexStorage<String, String> storage = assertInstanceOf(index.getStorage(), MapIndexStorage.class);
       PersistentMapImpl<String, UpdatableValueContainer<String>> map =
         assertInstanceOf(storage.getIndexMap(), PersistentMapImpl.class);
       assertTrue(map.getReadOnly());
@@ -1023,13 +967,13 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
     PlatformTestUtil.startPerformanceTest("Vfs Event Processing By Index", 1000, () -> {
       PsiFile[] files = FilenameIndex.getFilesByName(getProject(), filename, GlobalSearchScope.moduleScope(getModule()));
-      assert files.length == 1;
+      assertEquals(1, files.length);
 
       VirtualFile file = files[0].getVirtualFile();
 
       String filename2 = "B.java";
       int max = 100000;
-      List<VFileEvent> eventList = new ArrayList<VFileEvent>(max);
+      List<VFileEvent> eventList = new ArrayList<>(max);
       int len = max / 2;
 
       for (int i = 0; i < len; ++i) {
@@ -1046,7 +990,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       applier.afterVfsChange();
 
       files = FilenameIndex.getFilesByName(getProject(), filename, GlobalSearchScope.moduleScope(getModule()));
-      assert (files == null ? null : files.length) == 1;
+      assertEquals(1, files.length);
     }).assertTiming();
   }
 
@@ -1057,12 +1001,15 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       JavaPsiFacade.getInstance(getProject()).findClass(Thread.class.getName(), GlobalSearchScope.allScope(getProject()));
     final VirtualFile srcRoot = myFixture.getTempDirFixture().getFile("");
     WriteCommandAction.runWriteCommandAction(getProject(),
-                                             (ThrowableComputable<VirtualFile, IOException>)() -> VfsUtil.copy(IndexTest.this, thread.getContainingFile().getVirtualFile(), srcRoot));
+                                             (ThrowableComputable<VirtualFile, IOException>)() -> VfsUtil.copy(this,
+                                                                                                               thread.getContainingFile()
+                                                                                                                 .getVirtualFile(),
+                                                                                                               srcRoot));
 
     GlobalSearchScope projectScope = GlobalSearchScope.projectScope(getProject());
-    assert !JavaOverridingMethodUtil.getOverridingMethodsIfCheapEnough(runnable.getMethods()[0], projectScope,
-                                                                       unused -> true).findFirst().isPresent();
-    assert StubIndex.getInstance().getElements(JavaStubIndexKeys.METHODS, "run", getProject(), projectScope, PsiMethod.class).isEmpty();
+    assertTrue(JavaOverridingMethodUtil.getOverridingMethodsIfCheapEnough(runnable.getMethods()[0], projectScope,
+                                                                          unused -> true).findFirst().isEmpty());
+    assertTrue(StubIndex.getElements(JavaStubIndexKeys.METHODS, "run", getProject(), projectScope, PsiMethod.class).isEmpty());
   }
 
   public void test_text_todo_indexing_checks_for_cancellation() {
@@ -1106,37 +1053,26 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     }
   }
 
-  public void test_stub_updating_index_problem_during_processAllKeys() throws IOException {
+  public void test_stub_updating_index_problem_during_processAllKeys() {
     final String className = "Foo";
     myFixture.addClass("class " + className + " {}");
     final GlobalSearchScope scope = GlobalSearchScope.allScope(getProject());
 
-    final List<Boolean> foundClassProcessAll = new ArrayList<Boolean>(Arrays.asList(false));
-    final List<Boolean> foundClassStub = new ArrayList<Boolean>(Arrays.asList(false));
+    final List<Boolean> foundClassProcessAll = new ArrayList<>(List.of(false));
+    final List<Boolean> foundClassStub = new ArrayList<>(List.of(false));
 
-    try {
-      StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), new Processor<String>() {
-        @Override
-        public boolean process(String aClass) {
-          if (!className.equals(aClass)) return true;
-          foundClassProcessAll.set(0, true);
-          // adding file will add file to index's dirty set but it should not be processed within current read action
-          myFixture.addFileToProject("Bar.java", "class Bar { }");
-          StubIndex.getInstance()
-            .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, new Processor<PsiClass>() {
-              @Override
-              public boolean process(PsiClass clazz) {
-                foundClassStub.set(0, true);
-                return true;
-              }
-            });
+    StubIndex.getInstance().processAllKeys(JavaStubIndexKeys.CLASS_SHORT_NAMES, getProject(), aClass -> {
+      if (!className.equals(aClass)) return true;
+      foundClassProcessAll.set(0, true);
+      // adding file will add file to index's dirty set, but it should not be processed within current read action
+      myFixture.addFileToProject("Bar.java", "class Bar { }");
+      StubIndex.getInstance()
+        .processElements(JavaStubIndexKeys.CLASS_SHORT_NAMES, aClass, getProject(), scope, PsiClass.class, clazz -> {
+          foundClassStub.set(0, true);
           return true;
-        }
-      });
-    }
-    catch (Exception e) {
-      if (!(e instanceof RuntimeException)) throw e;
-    }
+        });
+      return true;
+    });
 
     assertTrue(foundClassProcessAll.get(0));
     assertTrue(foundClassStub.get(0));// allow access stub index processing other index
@@ -1190,7 +1126,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertIsIndexed(file);
 
     WriteCommandAction.runWriteCommandAction(getProject(), (ThrowableComputable<?, IOException>)() -> {
-      file.rename(IndexTest.this, "intellij2.exe");
+      file.rename(this, "intellij2.exe");
       return null;
     });
     FileBasedIndex.getInstance().ensureUpToDate(FileTypeIndex.NAME, getProject(), scope);
@@ -1200,17 +1136,17 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
   public void test_IDEA_188028() throws IOException {
     final PsiJavaFileImpl file = (PsiJavaFileImpl)myFixture.addFileToProject("a.java", "class Foo {}");
     WriteCommandAction.runWriteCommandAction(getProject(), (ThrowableComputable<?, IOException>)() -> {
-        Document document = file.getViewProvider().getDocument();
-        document.setText("");
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-        PsiManager.getInstance(getProject()).reloadFromDisk(file);
-        document.setText("");
-      assert findClass("Foo") == null;
-        file.getVirtualFile().rename(IndexTest.this, "a1.java");
-        PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-      assert findClass("Foo") == null;
-        return null;
-      });
+      Document document = file.getViewProvider().getDocument();
+      document.setText("");
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      PsiManager.getInstance(getProject()).reloadFromDisk(file);
+      document.setText("");
+      assertNull(findClass("Foo"));
+      file.getVirtualFile().rename(this, "a1.java");
+      PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
+      assertNull(findClass("Foo"));
+      return null;
+    });
   }
 
   public void test_every_directory_and_file_are_marked_as_indexed_in_open_project() {
@@ -1233,66 +1169,68 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertIsIndexed(main);
     assertIsIndexed(src);
 
-    assert findClass("Foo") != null;// ensure content dependent indexes are passed
+    assertNotNull(findClass("Foo"));
 
     //assertIsIndexed(foo) // FIXME-ank: not indexed, because indexing changes file's modCounter
   }
 
   public void test_stub_updating_index_stamp() throws IOException {
     final VirtualFile vFile = myFixture.addClass("class Foo {}").getContainingFile().getVirtualFile();
-    long stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
     WriteAction.run(() -> VfsUtil.saveText(vFile, "class Foo { void m() {} }"));
-    assertTrue(stamp != ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
-    stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+    stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
     WriteAction.run(() -> VfsUtil.saveText(vFile, "class Foo { void m() { int k = 0; } }"));
-    assertTrue(stamp == ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+    assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
   }
 
   public void test_index_stamp_update_on_transient_data_deletion() {
     WriteCommandAction.runWriteCommandAction(getProject(), () -> {
-      long stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+      long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
       PsiFile file = myFixture.addClass("class Foo {}").getContainingFile();
 
       ((PsiJavaFile)file).getImportList().add(JavaPsiFacade.getElementFactory(getProject()).createImportStatementOnDemand("java.io"));
-      assert findClass("Foo") != null;
+      assertNotNull(findClass("Foo"));
       PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-      assertTrue(stamp != ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
-      stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+      assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+      stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
-      assert findClass("Foo") != null;
+      assertNotNull(findClass("Foo"));
       PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
-      assertTrue(stamp == ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
-      stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+      assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+      stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
       PostprocessReformattingAspect.getInstance(getProject()).doPostponedFormatting();
       PsiManager.getInstance(getProject()).reloadFromDisk(file);
-      assertTrue(stamp != ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+      assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
 
-      assert findClass("Foo") != null;
+      assertNotNull(findClass("Foo"));
       PsiDocumentManager.getInstance(getProject()).commitAllDocuments();
       assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
       stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
       findClass("Foo").replace(findClass("Foo").copy());
-      assert findClass("Foo") != null;
-      assertTrue(stamp == ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
-      });
+      assertNotNull(findClass("Foo"));
+      assertEquals(stamp, FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+    });
   }
 
   public void test_non_empty_memory_storage_cleanup_advances_index_modification_stamp() {
-    long stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    long stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
     final PsiFile file = myFixture.addClass("class Foo {}").getContainingFile();
-    assert findClass("Foo") != null;
-    assertTrue(stamp != ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
-    stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    assertNotNull(findClass("Foo"));
+    assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+    stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
-    WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() -> ((PsiJavaFile)file).getImportList().add(JavaPsiFacade.getElementFactory(getProject()).createImportStatementOnDemand("java.io")));
-    assert findClass("Foo") != null;
-    assertTrue(stamp != ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
-    stamp = ((FileBasedIndexImpl)FileBasedIndex.getInstance()).getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
+    WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() -> ((PsiJavaFile)file).getImportList()
+      .add(JavaPsiFacade.getElementFactory(getProject()).createImportStatementOnDemand("java.io")));
+    assertNotNull(findClass("Foo"));
+    assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
+    stamp = FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject());
 
-    WriteCommandAction.runWriteCommandAction(getProject(), () -> ((FileDocumentManagerImpl)FileDocumentManager.getInstance()).dropAllUnsavedDocuments());
-    assert findClass("Foo") != null;
+    WriteCommandAction.runWriteCommandAction(getProject(),
+                                             () -> ((FileDocumentManagerImpl)FileDocumentManager.getInstance()).dropAllUnsavedDocuments());
+    assertNotNull(findClass("Foo"));
     assertTrue(stamp != FileBasedIndex.getInstance().getIndexModificationStamp(StubUpdatingIndex.INDEX_ID, getProject()));
   }
 
@@ -1345,16 +1283,16 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     assertTrue(idIndexData.containsKey(new IdIndexEntry("qwerty", false)));
     assertEquals(UsageSearchContext.IN_STRINGS | UsageSearchContext.IN_CODE, idIndexData.get(new IdIndexEntry("qwerty", false)).intValue());
     assertEquals(GroovyFileType.GROOVY_FILE_TYPE, FileTypeIndex.getIndexedFileType(virtualFile, getProject()));
-    ObjectStubTree<?> stub = (ObjectStubTree<?>)StubTreeLoader.getInstance().readFromVFile(getProject(), virtualFile);
+    ObjectStubTree<?> stub = StubTreeLoader.getInstance().readFromVFile(getProject(), virtualFile);
     assertStubLanguage(GroovyLanguage.INSTANCE, stub);
     assertEquals(GroovyLanguage.INSTANCE, file.getLanguage());
-    assert findClass("Foo") != null;
+    assertNotNull(findClass("Foo"));
     final ExactFileNameMatcher matcher = new ExactFileNameMatcher("Foo.groovy");
     try {
       WriteCommandAction.runWriteCommandAction(getProject(), () -> FileTypeManager.getInstance().associate(JavaFileType.INSTANCE, matcher));
 
       assertEquals(JavaFileType.INSTANCE, FileTypeIndex.getIndexedFileType(virtualFile, getProject()));
-      stub = ((ObjectStubTree<?>)(StubTreeLoader.getInstance().readFromVFile(getProject(), virtualFile)));
+      stub = StubTreeLoader.getInstance().readFromVFile(getProject(), virtualFile);
       assertStubLanguage(JavaLanguage.INSTANCE, stub);
       idIndexData = getIdIndexData(virtualFile);
       assertTrue(idIndexData.containsKey(new IdIndexEntry("Foo", false)));
@@ -1363,7 +1301,8 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       assertEquals(JavaLanguage.INSTANCE, javaFooClass.getLanguage());
     }
     finally {
-      WriteCommandAction.runWriteCommandAction(getProject(), () -> FileTypeManager.getInstance().removeAssociation(JavaFileType.INSTANCE, matcher));
+      WriteCommandAction.runWriteCommandAction(getProject(),
+                                               () -> FileTypeManager.getInstance().removeAssociation(JavaFileType.INSTANCE, matcher));
     }
   }
 
@@ -1374,9 +1313,9 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     FileBasedIndex fbi = FileBasedIndex.getInstance();
     fbi.ensureUpToDate(IdIndex.NAME, getProject(), GlobalSearchScope.allScope(getProject()));
     UpdatableIndex<IdIndexEntry, Integer, FileContent, ?> idIndex =
-      (UpdatableIndex<IdIndexEntry, Integer, FileContent, ?>)((FileBasedIndexImpl)fbi).getIndex(IdIndex.NAME);
+      ((FileBasedIndexImpl)fbi).getIndex(IdIndex.NAME);
 
-    IntForwardIndex idIndexForwardIndex = (IntForwardIndex)((VfsAwareMapReduceIndex)idIndex).getForwardIndex();
+    IntForwardIndex idIndexForwardIndex = (IntForwardIndex)((VfsAwareMapReduceIndex<?, ?, ?>)idIndex).getForwardIndex();
 
     // id index depends on file type
     assertFalse(idIndexForwardIndex.getInt(javaFileId) == 0);
@@ -1403,7 +1342,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     return found.get();
   }
 
-  private static void assertStubLanguage(@NotNull com.intellij.lang.Language expectedLanguage, @NotNull ObjectStubTree stub) {
+  private static void assertStubLanguage(@NotNull com.intellij.lang.Language expectedLanguage, @NotNull ObjectStubTree<?> stub) {
     ParserDefinition parserDefinition = LanguageParserDefinitions.INSTANCE.forLanguage(expectedLanguage);
     PsiFileStub fileStub = assertInstanceOf(stub.getPlainList().get(0), PsiFileStub.class);
     assertEquals(parserDefinition.getFileNodeType(), fileStub.getType());
@@ -1418,7 +1357,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     RecursionManager.disableMissedCacheAssertions(getTestRootDisposable());
 
     final PsiClass clazz = myFixture.addClass("class Foo {}");
-    assert clazz.equals(myFixture.findClass("Foo"));
+    assertEquals(clazz, myFixture.findClass("Foo"));
 
     DumbModeTestUtils.runInDumbModeSynchronously(getProject(), () -> {
       final AtomicInteger indexQueries = new AtomicInteger(0);
@@ -1442,22 +1381,22 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
       // index queries aren't cached
       for (int i = 0; i < 5; i++) {
-        assert clazz.equals(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(stubQuery)));
+        assertEquals(clazz, FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(stubQuery)));
       }
-      assert indexQueries.get() >= 5;
+      assertTrue(indexQueries.get() >= 5);
 
       indexQueries.set(0);
-      assert FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(idQuery));
-      assert FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(idQuery));
-      assert indexQueries.get() >= 2;
+      assertTrue(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(idQuery)));
+      assertTrue(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(idQuery)));
+      assertTrue(indexQueries.get() >= 2);
 
       // non-index queries should work as usual
       for (int i = 0; i < 3; i++) {
-        assert "x".equals(
-          FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(plainValue)));
-        assert "x".equals(FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(plainValue)));
+        assertEquals("x",
+                     FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, asComputable(plainValue)));
+        assertEquals("x", FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, asComputable(plainValue)));
       }
-      assert plainQueries.get() > 0 && plainQueries.get() < 3 * 2;
+      assertTrue(plainQueries.get() > 0 && plainQueries.get() < 3 * 2);
 
       // cache queries inside single ignoreDumbMode
       indexQueries.set(0);
@@ -1465,9 +1404,9 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       FileBasedIndex.getInstance()
         .ignoreDumbMode(DumbModeAccessType.RAW_INDEX_DATA_ACCEPTABLE, () -> {
           for (int i = 0; i < 5; i++) {
-            assert idQuery.getValue();
+            assertTrue(idQuery.getValue());
           }
-          assert indexQueries.get() > 0 && indexQueries.get() < 5;
+          assertTrue(indexQueries.get() > 0 && indexQueries.get() < 5);
         });
 
       indexQueries.set(0);
@@ -1475,9 +1414,9 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
       FileBasedIndex.getInstance()
         .ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, () -> {
           for (int i = 0; i < 5; i++) {
-            assert clazz.equals(stubQuery.getValue());
+            assertEquals(clazz, stubQuery.getValue());
           }
-          assert indexQueries.get() > 0 && indexQueries.get() < 5;
+          assertTrue(indexQueries.get() > 0 && indexQueries.get() < 5);
         });
     });
   }
@@ -1486,17 +1425,18 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     RecursionManager.disableMissedCacheAssertions(getTestRootDisposable());
 
     final PsiClass clazz = myFixture.addClass("class Foo {}");
-    assert clazz.equals(myFixture.findClass("Foo"));
+    assertEquals(clazz, myFixture.findClass("Foo"));
 
     DumbModeTestUtils.runInDumbModeSynchronously(getProject(), () -> {
       final CachedValue<PsiClass> stubQuery = CachedValuesManager.getManager(getProject()).createCachedValue(() -> {
-        return CachedValueProvider.Result.create(myFixture.getJavaFacade().findClass("Foo", GlobalSearchScope.allScope(getProject())),PsiModificationTracker.MODIFICATION_COUNT);
+        return CachedValueProvider.Result.create(myFixture.getJavaFacade().findClass("Foo", GlobalSearchScope.allScope(getProject())),
+                                                 PsiModificationTracker.MODIFICATION_COUNT);
       });
 
-      FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, () ->  {
-        assert clazz.equals(stubQuery.getValue());
+      FileBasedIndex.getInstance().ignoreDumbMode(DumbModeAccessType.RELIABLE_DATA_ONLY, () -> {
+        assertEquals(clazz, stubQuery.getValue());
         WriteCommandAction.runWriteCommandAction(getProject(), (Computable<PsiElement>)() -> clazz.setName("Bar"));
-        assert null == stubQuery.getValue();
+        assertNull(stubQuery.getValue());
       });
     });
   }
@@ -1505,6 +1445,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
     final VirtualFile file =
       ScratchRootType.getInstance().createScratchFile(getProject(), "Foo.java", JavaLanguage.INSTANCE, "class Foo {}");
     int fileId = ((VirtualFileWithId)file).getId();
+    deleteOnTearDown(file);
 
     FileBasedIndexImpl fileBasedIndex = (FileBasedIndexImpl)FileBasedIndex.getInstance();
     ID<Integer, Void> trigramId = TrigramIndex.INDEX_ID;
@@ -1522,6 +1463,7 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
 
   public void test_requestReindex() {
     VirtualFile file = ScratchRootType.getInstance().createScratchFile(getProject(), "Foo.java", JavaLanguage.INSTANCE, "class Foo {}");
+    deleteOnTearDown(file);
 
     CountingFileBasedIndexExtension.registerCountingFileBasedIndex(getTestRootDisposable());
 
@@ -1584,11 +1526,56 @@ public class IndexTest extends JavaCodeInsightFixtureTestCase {
   }
 
   private static <T> ThrowableComputable<T, RuntimeException> asComputable(final CachedValue<T> cachedValue) {
-    return new ThrowableComputable<T, RuntimeException>() {
-      @Override
-      public T compute() throws RuntimeException {
-        return cachedValue.getValue();
-      }
-    };
+    return () -> cachedValue.getValue();
+  }
+
+  private void deleteOnTearDown(VirtualFile fileOrDir) {
+    Disposer.register(myFixture.getTestRootDisposable(), () -> VfsTestUtil.deleteFile(fileOrDir));
+  }
+
+  public void test_essential_GlobalSearchScopes_implement_VirtualFileEnumeration() {
+    VirtualFile src = myFixture.addFileToProject("src1/A.java", "class A { int xxxyyy;}").getVirtualFile();
+    assertNotNull(findClass("A"));
+    VirtualFile scratch = ScratchRootType.getInstance().createScratchFile(getProject(), "Foo.java", JavaLanguage.INSTANCE, "class Foo { }");
+    deleteOnTearDown(scratch);
+
+    assertNotNull(VirtualFileEnumeration.extract(new ModuleWithDependentsScope(getProject(), Collections.singletonList(getModule()))));
+    assertNotNull(VirtualFileEnumeration.extract(getModule().getModuleWithDependenciesScope()));
+    assertNotNull(VirtualFileEnumeration.extract(getModule().getModuleWithDependentsScope()));
+    assertNotNull(VirtualFileEnumeration.extract(ScratchesSearchScope.getScratchesScope(getProject())));
+    assertNotNull(VirtualFileEnumeration.extract(getModule().getModuleScope()));
+
+    VirtualFileEnumeration scratchEnum = VirtualFileEnumeration.extract(ScratchesSearchScope.getScratchesScope(getProject()));
+    assertTrue(scratchEnum.contains(((VirtualFileWithId)scratch).getId()));
+    assertFalse(scratchEnum.contains(((VirtualFileWithId)src).getId()));
+    VirtualFileEnumeration moduleEnum = VirtualFileEnumeration.extract(getModule().getModuleScope());
+    assertFalse(moduleEnum.contains(((VirtualFileWithId)scratch).getId()));
+    assertTrue(moduleEnum.contains(((VirtualFileWithId)src).getId()));
+
+    // assert that union merges enumerations correctly
+    GlobalSearchScope scratchPlusSrc = getModule().getModuleScope().uniteWith(ScratchesSearchScope.getScratchesScope(getProject()));
+    VirtualFileEnumeration scratchPlusSrcEnum = VirtualFileEnumeration.extract(scratchPlusSrc);
+    assertNotNull(scratchPlusSrcEnum);
+    assertTrue(scratchPlusSrcEnum.contains(((VirtualFileWithId)scratch).getId()));
+    assertTrue(scratchPlusSrcEnum.contains(((VirtualFileWithId)src).getId()));
+
+    VirtualFile src2 = myFixture.addFileToProject("src1/B.java", "class B { }").getVirtualFile();
+    GlobalSearchScope files = GlobalSearchScope.filesScope(getProject(), Arrays.asList(src, src2));
+    GlobalSearchScope filesAndSrc = getModule().getModuleScope().intersectWith(files);
+    VirtualFileEnumeration filesAndSrcEnum = VirtualFileEnumeration.extract(filesAndSrc);
+    assertNotNull(filesAndSrcEnum);
+    assertFalse(filesAndSrcEnum.contains(((VirtualFileWithId)scratch).getId()));
+    assertTrue(filesAndSrcEnum.contains(((VirtualFileWithId)src).getId()));
+    assertTrue(filesAndSrcEnum.contains(((VirtualFileWithId)src2).getId()));
+
+    VirtualFile scratchTxt = ScratchRootType.getInstance().createScratchFile(getProject(), "Foo.txt", PlainTextLanguage.INSTANCE, "xxx");
+    assertTrue(ScratchesSearchScope.getScratchesScope(getProject()).contains(scratchTxt));
+    GlobalSearchScope scratchJava = GlobalSearchScope.getScopeRestrictedByFileTypes(ScratchesSearchScope.getScratchesScope(getProject()), JavaFileType.INSTANCE);
+    assertFalse(scratchJava.contains(scratchTxt));
+    VirtualFileEnumeration scratchJavaEnum = VirtualFileEnumeration.extract(scratchJava);
+    assertNotNull(scratchJavaEnum);
+    assertTrue(scratchJavaEnum.contains(((VirtualFileWithId)scratch).getId()));
+    assertFalse(scratchJavaEnum.contains(((VirtualFileWithId)src).getId()));
+    assertFalse(scratchJavaEnum.contains(((VirtualFileWithId)src2).getId()));
   }
 }
